files/multimedia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multimedia
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
