files/multimedia/jellyfin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: multimedia
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        fsGroup: 1000
      nodeSelector:
        eu.elarreglador/worker: "true"
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          ports:
            - containerPort: 8096
          resources:
            requests:
              cpu: 1
              memory: 1Gi
            limits:
              cpu: 1500m
              memory: 3Gi
          startupProbe:
            httpGet:
              path: /
              port: 8096
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 36
          readinessProbe:
            httpGet:
              path: /
              port: 8096
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 8096
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 6
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /config/cache
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config-local
        - name: cache
          emptyDir:
            sizeLimit: 1Gi
        - name: backup
          persistentVolumeClaim:
            claimName: media-data
        - name: media
          persistentVolumeClaim:
            claimName: media-data
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: multimedia
  labels:
    app: jellyfin
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.53
  externalTrafficPolicy: Local
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
