files/multimedia/ingress-qbittorrent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: multimedia
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: torrent.elarreglador.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
  tls:
    - hosts:
        - torrent.elarreglador.eu
      secretName: qbittorrent-elarreglador-eu-tls
