files/multimedia/networkpolicy-acme-http01.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: acme-http01-solver
  namespace: multimedia
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8089
