files/multimedia/networkpolicy-es-badge.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: es-badge-ingress
  namespace: multimedia
spec:
  podSelector:
    matchLabels:
      app: es-badge
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
      ports:
        - protocol: TCP
          port: 80
