files/multimedia/networkpolicy-qbittorrent.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent-allow-torrent
  namespace: multimedia
spec:
  podSelector:
    matchLabels:
      app: qbittorrent
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 6881
        - protocol: UDP
          port: 6881
